<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#4298b4"
        app:titleTextColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        style="@style/ToolbarStyle">

        <TextView
            android:id="@+id/tv_about_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_header_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/header_mountains_mobile2"
        app:layout_constraintTop_toBottomOf="@id/toolbar_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/iv_header_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="65dp"
                android:background="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_about_photo"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/about_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircleImageView" />

                    <TextView
                        android:id="@+id/tv_about_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:text="@string/rivonny_wulandari"
                        android:fontFamily="@font/poppins_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_about_photo" />

                    <TextView
                        android:id="@+id/tv_about_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:text="@string/rivonnywulandari19_gmail_com"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_about_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
